# Monte-Carlo-Simulation-of-Radioactive-Decay

./: AdvancedFeatures.ipynb  BasicSimulation.ipynb  CITATION.cff  LICENSE  MultipleChannels.ipynb  PhysicsLaw.md  WhatIHaveBuild.md  WhatItIS.md  config.py  pyproject.toml  readme.md  requirements.txt
animations/: __init__.py  grid_2d_animation.py  realtime_interactive.py  space_3d_animation.py
docs/: CONTRIBUTING.md  PERFORMANCE.md  PHYSICS_BACKGROUND.md
examples/: generate_animations.py  run_basic.py  run_benchmarks.py  run_full_analysis.py  run_multichannel.py
monte_carlo_decay.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
results/benchmarks/: bench.json
src/: __init__.py  basic_simulation.py  detector_effects.py  multichannel_simulation.py  statistics.py  utils.py  visualization.py
tests/: conftest.py  test_basic_simulation.py  test_physics_accuracy.py  test_statistics.py
